// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADD_KID 1`] = `
Object {
  "kids": Array [],
  "selectedKid": Object {
    "UUID": "new-UUID",
    "deviceType": "unknown",
    "setupID": "setupID",
    "status": "WAITING",
  },
}
`;

exports[`DEVICE_UPDATED 1`] = `
Object {
  "kids": Array [],
  "selectedKid": Object {
    "UUID": "surprise",
    "deviceType": "unknown",
  },
  "step": 1,
}
`;

exports[`DEVICE_UPDATED 2`] = `
Object {
  "kids": Array [],
  "selectedKid": Object {
    "UUID": "surprise",
    "deviceType": "Android",
  },
  "step": 2,
}
`;

exports[`ENTER_KID_NAME 1`] = `
Object {
  "selectedKid": Object {
    "UUID": "123",
    "name": "Bob",
  },
}
`;

exports[`FETCHED_REPORT 1`] = `
Object {
  "loading": false,
  "reports": Object {
    "abc": 123,
  },
}
`;

exports[`LOGGED_IN 1`] = `
Object {
  "kids": Array [],
  "parentName": "Jim",
  "price": "one dollar",
  "profile": Object {
    "UUID": "orange",
    "kids": Array [
      "hey",
      "ho",
    ],
    "name": "Jim Bob",
  },
  "step": 1,
}
`;

exports[`NEXT_STEP 1`] = `
Array [
  Array [
    "Advanced Through Walkthrough",
    Object {
      "value": 2,
    },
  ],
]
`;

exports[`PREVIOUS_STEP 1`] = `
Object {
  "step": 0,
}
`;

exports[`PREVIOUS_STEP 2`] = `
Array [
  Array [
    "Went Back in Walkthrough",
    Object {
      "value": 0,
    },
  ],
  Array [
    "Went Back in Walkthrough",
    Object {
      "value": 0,
    },
  ],
]
`;

exports[`REACT_NATIVE_ROUTER_FLUX_PUSH 1`] = `
Object {
  "other": "remains",
  "sceneName": "something",
}
`;

exports[`RESET_STATE 1`] = `
Object {
  "kidSuggestions": Array [],
  "selectedKid": "alice",
  "step": 0,
}
`;

exports[`SELECT_KID 1`] = `
Object {
  "selectedKid": Object {
    "UUID": "abc123",
    "deviceType": "unknown",
  },
}
`;

exports[`SELECT_KID_IMAGE 1`] = `
Object {
  "selectedKid": Object {
    "avatarURL": "file://something",
  },
}
`;
